--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "flutter-clean-architecture",
+  "name": "flutter-clean-mvvm-ddd",
   "displayName": "Flutter Feature Scaffolding",
   "description": "Add new feature easily with well structured directories (Clean Architecture pattern)",
-  "version": "2.1.4",
-  "publisher": "KiritchoukC",
+  "version": "0.0.1",
+  "publisher": "TheFabbius",
   "repository": {
     "type": "git",
-    "url": "https://github.com/KiritchoukC/vscode-ext_flutter-clean-architecture"
+    "url": "https://github.com/TheFabbius/vscode_extension-flutter-clean-MVVM-DDD"
   },
   "license": "MIT",
   "engines": {
@@ -19,40 +19,65 @@
     "clean-architecture",
     "dart",
     "flutter",
-    "bloc",
-    "state-management"
+    "mvvm",
+    "ddd"
   ],
   "icon": "assets/logo.png",
   "activationEvents": [
-    "onCommand:extension.new-feature",
+    "onCommand:extension.new-feature-all",
+    "onCommand:extension.new-feature-data",
+    "onCommand:extension.new-feature-domain",
+    "onCommand:extension.new-feature-presentation",
     "workspaceContains:**/pubspec.yaml"
   ],
   "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "extension.new-feature-bloc",
-        "title": "Bloc: New Feature",
-        "category": "Flutter Clean Architecture",
+        "command": "extension.new-feature-all",
+        "title": "New Feature - All Layers",
+        "category": "Flutter Clean MVVM DDD: ",
         "icon": "assets/logo.png"
       },
       {
-        "command": "extension.new-feature-cubit",
-        "title": "Cubit: New Feature",
-        "category": "Flutter Clean Architecture",
+        "command": "extension.new-feature-data",
+        "title": "New Feature - Data Layer",
+        "category": "Flutter Clean MVVM DDD: ",
+        "icon": "assets/logo.png"
+      },
+      {
+        "command": "extension.new-feature-domain",
+        "title": "New Feature - Domain Layer",
+        "category": "Flutter Clean MVVM DDD: ",
+        "icon": "assets/logo.png"
+      },
+      {
+        "command": "extension.new-feature-presentation",
+        "title": "New Feature - Presentation Layer",
+        "category": "Flutter Clean MVVM DDD: ",
         "icon": "assets/logo.png"
       }
     ],
     "menus": {
       "explorer/context": [
         {
-          "command": "extension.new-feature-bloc",
+          "command": "extension.new-feature-all",
           "group": "cleanArchitectureGroup@1",
           "when": "explorerResourceIsFolder"
         },
         {
-          "command": "extension.new-feature-cubit",
+          "command": "extension.new-feature-data",
           "group": "cleanArchitectureGroup@2",
+          "when": "explorerResourceIsFolder"
+        },
+        {
+          "command": "extension.new-feature-domain",
+          "group": "cleanArchitectureGroup@3",
+          "when": "explorerResourceIsFolder"
+        },
+        {
+          "command": "extension.new-feature-presentation",
+          "group": "cleanArchitectureGroup@4",
           "when": "explorerResourceIsFolder"
         }
       ]
@@ -81,7 +106,7 @@
     "glob": "^7.1.4",
     "mocha": "^6.1.4",
     "tslint": "^5.12.1",
-    "typescript": "^3.3.1",
+    "typescript": "^3.9.10",
     "vsce": "^1.81.1",
     "vscode-test": "^1.2.0"
   },
